--- a/public/styles/pages/home/news-and-events.css
+++ b/public/styles/pages/home/news-and-events.css
@@ -22,17 +22,25 @@
   
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   gap: 6.4rem;
 }
 
+.no-event-text {
+  font-size: 2.8rem;
+  font-weight: 300;
+  line-height: 1.2;
+  text-align: center;
+}
+
 @media only screen and (max-width: 1390px) {
-  .container-news-and-events .info-card:nth-child(3) {
+  #news-and-events-carousel.carousel .info-card:nth-child(3) {
     display: none;
   }
 }
 
 @media only screen and (max-width: 976px) {
-  .container-news-and-events .info-card:nth-child(2) {
+  #news-and-events-carousel.carousel .info-card:nth-child(2) {
     display: none;
   }
 }
@@ -40,5 +48,8 @@
 @media only screen and (max-width: 425px) {
   .info-cards {
     margin-top: 4.8rem;
+  }
+  .no-event-text {
+    font-size: 2.4rem;
   }
 }
